# FastPKI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  alembic.ini  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 0103fe2e44a0_add_intermediate_ca_support.py  0284d86b8ece_add_allow_leaf_certs_to_ca.py  109b7b44c8ee_add_crl_base_url_to_certificate_.py  4a1d29090ec2_add_ownership_fields_to_ca_and_.py  861981bf12f8_add_audit_logs_table.py  9d90136388ec_initial_migration.py  b2f0c55c79a7_add_capability_fields_to_user.py  b978e2eebd16_add_token_revocation_tables_and_user_.py  b9a1e91948b5_use_timezone_aware_datetime_columns.py
app/: main.py
app/api/: __init__.py  audit.py  auth.py  ca.py  certs.py  deps.py  export.py  organizations.py  pki.py  users.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: audit.py  ca.py  cert.py  organization.py  user.py
app/services/: audit.py  ca.py  cert.py  encryption.py  exceptions.py  organization.py  permission.py  token.py  user.py
cli/: __init__.py  audit.py  auth.py  ca.py  cert.py  client.py  config.py  config_cmd.py  export.py  org.py  output.py  user.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: index.md
docs/deployment/: docker.md  production.md
docs/development/: contributing.md  versioning.md
docs/getting-started/: configuration.md  first-steps.md  installation.md
docs/guides/: audit-logs.md  certificate-authorities.md  certificates.md  cli.md  crl.md  exporting.md  organizations.md  users.md
docs/reference/: api.md  cli.md  configuration.md  models.md
docs/security/: authentication.md  authorization.md  encryption.md
docs/specs/: 2026-04-14-token-revocation-design.md  2026-04-14-token-revocation-plan.md
scripts/: lint.sh
tests/: conftest.py
tests/test_api/: test_audit.py  test_auth.py  test_auth_dependencies.py  test_ca.py  test_ca_permissions.py  test_cert_permissions.py  test_certificates.py  test_deps.py  test_export.py  test_export_permissions.py  test_intermediate_ca.py  test_organizations.py  test_organizations_direct.py  test_pki.py  test_security.py  test_superuser_flow.py  test_user_capabilities.py  test_users.py
tests/test_services/: test_audit_service.py  test_ca_encryption.py  test_ca_ownership.py  test_cert_ownership.py  test_certificate_service.py  test_encryption_service.py  test_export_service.py  test_intermediate_ca.py  test_organization_permissions.py  test_organization_service.py  test_permission_service.py  test_token_service.py  test_user_capabilities.py  test_user_service.py
